# sift

./: .gitignore  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 6484e5ebeb38_tender_and_file_tables.py
backend/: docker-compose.yml  main.py  models.py  pyproject.toml  reset_db.py  schemas.py
backend/models/: __init__.py  chat.py  tender.py
backend/routers/: add_file.py  analyze.py  new_tender.py  tenders.py
backend/routers/conversation/: __init__.py  list.py  manage.py  messages.py  send.py
backend/routers/tender/: __init__.py  add_files.py  analyze.py  detail.py  embed.py  list.py  new.py
backend/services/: chunking.py  tenderAnalysis.py
backend/services/conversation/: generateTitle.py
backend/services/files/: vectorize.py
frontend/: .prettierignore  .prettierrc.mjs  components.json  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/(tendersList)/: page.tsx  types.ts
frontend/app/(tendersList)/components/: EmptyTenders.tsx  TenderRow.tsx  TendersPageClient.tsx
frontend/app/(tendersList)/hooks/: useTenders.ts
frontend/app/tenders/[id]/: not-found.tsx  page.tsx
frontend/app/tenders/[id]/actions/: getTender.ts
frontend/app/tenders/[id]/components/: ChatPanel.tsx  Criterion.tsx  (+4 more)
frontend/components/: AppSidebar.tsx  StatusBadge.tsx  TenderNotFound.tsx
frontend/hooks/: useDebouncedState.ts
frontend/lib/: api.ts  format.ts  queryKeys.ts
routers/: add_file.py  analyze.py  new_tender.py  rag.py
services/: embeddings.py
