[project]
name = "sift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.40.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
]
